link de render psogre a database_url

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = 
+DATABASE_URL=postgresql://galgostestingdb_user:e1pguxF4U2AZYJohNGhsZNP6UKhrmQ20@dpg-csnt74qj1k6c73b9hmr0-a/galgostestingdb
